--- a/trs-dapp/package.json
+++ b/trs-dapp/package.json
@@ -3,11 +3,13 @@
     "version":  "0.1.0",
     "private":  true,
     "scripts":  {
-                    "dev":  "next dev --turbopack",
-                    "build":  "next build --turbopack",
-                    "start":  "next start",
-                    "lint":  "eslint"
-                },
+                        "dev":  "next dev --turbopack",
+                        "build":  "next build",
+                        "export":  "next export",
+                        "vercel-build":  "next build && next export",
+                        "start":  "next start",
+                        "lint":  "eslint"
+                    },
     "dependencies":  {
                          "@solana/spl-token":  "^0.4.14",
                          "@solana/wallet-adapter-base":  "^0.9.27",
