--- a/trs-dapp/package.json
+++ b/trs-dapp/package.json
@@ -1,4 +1,4 @@
-{
+﻿{
     "name":  "trs-dapp",
     "version":  "0.1.0",
     "private":  true,
@@ -6,7 +6,7 @@
         "dev":  "next dev --turbopack",
         "build":  "next build",
         "export":  "next export",
-        "vercel-build":  "next build && next export",
+        "vercel-build":  "next build",
         "start":  "next start",
         "lint":  "eslint"
     },
