--- a/.github/workflows/anchor-deploy.yml
+++ b/.github/workflows/anchor-deploy.yml
@@ -33,6 +33,10 @@ jobs:
         run: |
           sh -c "$(curl -sSfL https://release.solana.com/stable/install)" <<< y
           echo "$HOME/.local/share/solana/install/active_release/bin" >> $GITHUB_PATH
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y pkg-config libudev-dev libusb-1.0-0-dev
 
       - name: Install Anchor CLI
         run: |
@@ -74,4 +78,5 @@ jobs:
         with:
           name: anchor-target
           path: toros-solana/target/deploy/**
+
 
