--- a/.github/workflows/anchor-deploy.yml
+++ b/.github/workflows/anchor-deploy.yml
@@ -41,9 +41,16 @@ jobs:
           cargo install --git https://github.com/coral-xyz/anchor anchor-cli --locked
       - name: Configure wallet and RPC
         run: |
-          export PATH="$HOME/.local/share/solana/install/active_release/bin:$PATH"
+          set -e
+          BIN_DIR="$HOME/.local/share/solana/install/active_release/bin"
+          if [ ! -x "$BIN_DIR/solana" ]; then
+            BIN_DIR=$(dirname "$(find "$HOME/.local/share/solana" -type f -name solana -path "*/bin/solana" -print -quit 2>/dev/null || true)")
+          fi
+          echo "BIN_DIR=$BIN_DIR"
+          ls -la "$BIN_DIR" || true
+          export PATH="$BIN_DIR:$PATH"
           which solana || true
-          ls -la $HOME/.local/share/solana/install/active_release/bin || true
+          solana --version || true
           mkdir -p $HOME/.config/solana
           if [ -z "$ANCHOR_WALLET_JSON" ]; then
             echo "Missing secret ANCHOR_WALLET" && exit 1
@@ -54,11 +61,9 @@ jobs:
           if [ -z "$RPC_URL_INPUT" ]; then
             RPC_URL_INPUT="https://api.devnet.solana.com"
           fi
-          "$HOME/.local/share/solana/install/active_release/bin/solana" --version
-          "$HOME/.local/share/solana/install/active_release/bin/solana" config set --url "$RPC_URL_INPUT" --keypair $HOME/.config/solana/id.json
+          solana config set --url "$RPC_URL_INPUT" --keypair $HOME/.config/solana/id.json
           echo "Using RPC: $RPC_URL_INPUT"
-          "$HOME/.local/share/solana/install/active_release/bin/solana-keygen" pubkey $HOME/.config/solana/id.json
-      - name: Build workspace
+          solana-keygen pubkey $HOME/.config/solana/id.json      - name: Build workspace
         working-directory: toros-solana
         run: anchor build
 
@@ -78,6 +83,7 @@ jobs:
         with:
           name: anchor-target
           path: toros-solana/target/deploy/**
+
 
 
 
