CI: restore valid YAML and steps for anchor deploy

--- a/.github/workflows/anchor-deploy.yml
+++ b/.github/workflows/anchor-deploy.yml
@@ -93,7 +93,10 @@ jobs:
           cat toros-solana/programs/trs_staking/src/lib.rs
 
       - name: Build workspace
-        working-directory: toros-solana`n        run: |`n          rm -f Cargo.lock`n          anchor build
+        working-directory: toros-solana
+        run: |
+          rm -f Cargo.lock
+          anchor build
 
       - name: Deploy program
         working-directory: toros-solana
